tests/parser/validinput/comma_separated_vars.idp
vocabulary V{
	type x
	P(x, x)
}
theory T:V{
	!x, y[x]: P(x, y).
	?x[x], y: P(y, x).
	{
		!x, y[x]: P(x, y).
	}
	#{x, y: P(x, y)} = 3.
}
structure S:V{
	
}

procedure main(){
	return 1
}
