tests/parser/invalidinput/func_inter.idp
vocabulary V{
	type x
	a(x):x
	a(x,x)
}

theory T:V{
	?x[x]: a(x)=x.
}

structure S:V{
	x = {1..2}
	a = {1,2;2,1}
}

procedure getExpectedNbOfModels(){
	return 1
}
